# autonomous_discovery

./: .coverage  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  PRODUCT.md  README.md  STRUCTURE.md  TECH.md  autonomous-math-discovery-project-brief.md  project-spec.md  pyproject.toml  unified-review.md
.github/workflows/: python-ci.yml
docs/archive/: README.md  autonomous-math-discovery-project-brief.md
lean/: README.md
lean/LeanExtract/: LeanExtract.lean  README.md  lake-manifest.json  lakefile.toml
src/autonomous_discovery/: config.py  phase2_cli.py
src/autonomous_discovery/gap_detector/: cli.py  (+9 more)
tests/conjecture_generator/: test_io.py  test_io_errors.py  test_llm_generator.py  test_template.py
tests/counterexample_filter/: test_basic.py
tests/evaluation/: test_evaluate_cli.py  test_metrics.py
tests/fixtures/: sample_decl_types.txt  sample_premises.txt
tests/gap_detector/: test_analogical.py  test_report.py  test_seeds.py  test_type_classes.py
tests/integration/: test_full_graph.py  test_gap_detector_pipeline.py  test_phase1_pilot_artifacts.py  test_phase2_cli.py  test_phase2_cli_generator_flag.py  test_phase2_cycle_smoke.py  test_pilot_cli.py
tests/knowledge_base/: test_graph.py  test_parser.py
tests/lean_bridge/: test_runner.py
tests/novelty_checker/: test_basic.py
tests/pipeline/: test_phase2_cli_generator_flag.py  test_phase2_validations.py
tests/proof_engine/: test_simple_engine.py  test_simple_engine_limits.py
tests/validation/: test_post_cutoff_counter.py
tests/verifier/: test_lean_verifier.py  test_lean_verifier_security.py
(+35 files in other folders)
