[project]
name = "autonomous-discovery"
version = "0.1.0"
description = "Autonomous mathematical discovery system using Lean 4 and Mathlib"
readme = "README.md"
authors = [
    { name = "TheIllusionOfLife", email = "TheIllusionOfLife@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "scipy>=1.17.0",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests requiring real data or external tools (run with '-m integration')",
]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
